--- a/pages/news/news.wxss
+++ b/pages/news/news.wxss
@@ -5,6 +5,11 @@
     overflow: auto;
     white-space: nowrap;
     background-color: #fff;
+    position: fixed;
+    left: 0;
+    right: 0;
+    top: 0;
+    z-index: 1;
 }
 
 .tab {
@@ -19,6 +24,7 @@
 }
 
 .news-list {
+    margin-top: 40px;
     background-color: #F2F2F2;
     padding: 10px 0;
 }
